samples/_failures_safe/1761361942_d2ea47_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_8e267407.c: In function ‘state_machine_init’:
./samples/SAFE/__tmp_8e267407.c:113:5: error: expected expression at end of input
  113 |     if (sm == NULL)
      |     ^~
./samples/SAFE/__tmp_8e267407.c:113:5: error: expected declaration or statement at end of input
